--- a/client/src/components/pages/Dentists.css
+++ b/client/src/components/pages/Dentists.css
@@ -8,37 +8,39 @@
 }
 
 .dentists__header h1 {
-    font-size: 36px;
+    font-size: 40px;
     font-weight: 700;
     margin-bottom: 10px;
-    color: #333;
+    color: #0053b6;
+    font-family: 'Times New Roman', Times, serif;
 }
 
 .dentists__header p {
-    font-size: 18px;
-    font-weight: 400;
-    color: #666;
+    font-size: 22px;
+    font-weight: 500;
+    color: black;
     margin-bottom: 20px;
+    font-family: 'Times New Roman', Times, serif;
 }
 
 .dentists__container {
     display: flex;
     justify-content: center; 
-    flex-wrap: wrap; /* Allows wrapping on smaller screens */
-    gap: 20px; /* Space between items */
+    flex-wrap: wrap;
+    gap: 20px;
 }
 
-.circle {
-    width: 300px; /* Circle diameter */
-    height: 300px; /* Circle diameter */
+.circle { 
+    width: 300px;
+    height: 300px;
     background: #05070f;
     border-radius: 50%;
     display: flex;
     align-items: center;
     justify-content: center;
-    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);  /* Shadow effect*/
-    transition: all 0.3s ease; /* Smooth transition */
-    position: relative; /* For positioning pseudo-elements */
+    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
+    transition: all 0.3s ease;
+    position: relative;
     text-align: center;
 }
 
@@ -61,15 +63,15 @@
 
 .dentists__container h3{
     text-align: center;
-    color: #333;
+    color: black;
     margin-top: 10px;
     text-transform: capitalize;
 }
 
 .icon {
-    font-size: 60px; /* Size of the icon */
-    color: #fff; /* White color for the icon */
-    z-index: 1; /* Ensure icon is above the pseudo-element */
+    font-size: 60px; 
+    color: #fff; 
+    z-index: 1;
 }
 
 .service__meta {
